--- a/website/templates/registration/login.html
+++ b/website/templates/registration/login.html
@@ -3,31 +3,33 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="flex w-screen justify-center">
-  <div class="w-7/8 max-w-xs lg:w-1/2 lg:max-w-none grid grid-rows-9 lg:grid-cols-9 lg:grid-rows-1 pt-8 place-items-center">
-    <div class="card h-full w-full rounded-xl border border-gray-600 border-solid place-items-center row-span-4 lg:col-span-4">
-      <p class="p-4 text-center">Please <strong>log in</strong> with your e-mail address and password to access your memberships</p>
-      <form class="p-4 w-full" method="post" action="{% url 'login' %}">
-        {% csrf_token %}
-        {{ login_form|crispy }}
-        <a class="link" href={% url 'password-reset' %}>I forgot my password</a>
-        <div class="card-actions mt-4">
-          <input class="btn btn-primary" type="submit" name="submit" value="Log in">
-        </div>
-      </form>
-    </div>
-    <div class="divider lg:divider-horizontal font-bold">OR</div>
-    <div class="card h-full w-full rounded-xl border border-gray-600 border-solid place-items-center row-span-4 lg:col-span-4">
-      <p class="p-4 text-center">Please <strong>register</strong> with your e-mail address and password to create an account</p>
-      <form class="p-4 w-full" method="post" action="{% url 'login' %}">
-        {% csrf_token %}
-        {{ register_form|crispy }}
-        <div class="card-actions mt-4">
-          <input class="btn btn-primary" type="submit" name="submit" value="Register">
-        </div>
-      </form>
+  <div class="flex w-screen justify-center">
+    <div class="w-7/8 max-w-xs lg:w-1/2 lg:max-w-none grid grid-rows-9 lg:grid-cols-9 lg:grid-rows-1 pt-8 place-items-center">
+      <div class="card h-full w-full rounded-xl border border-gray-600 border-solid place-items-center row-span-4 lg:col-span-4">
+        <p class="p-4 text-center">Please <strong>log in</strong> with your e-mail address and password to access your
+          memberships</p>
+        <form class="p-4 w-full" method="post" action="{% url 'login' %}">
+          {% csrf_token %}
+          {{ login_form|crispy }}
+          <a class="link" href={% url 'password-reset' %}>I forgot my password</a>
+          <div class="card-actions mt-4">
+            <input class="btn btn-primary" type="submit" name="submit" value="Log in">
+          </div>
+        </form>
+      </div>
+      <div class="divider lg:divider-horizontal font-bold">OR</div>
+      <div class="card h-full w-full rounded-xl border border-gray-600 border-solid place-items-center row-span-4 lg:col-span-4">
+        <p class="p-4 text-center">Please <strong>register</strong> with your e-mail address and password to create an
+          account</p>
+        <form class="p-4 w-full" method="post" action="{% url 'login' %}">
+          {% csrf_token %}
+          {{ register_form|crispy }}
+          <div class="card-actions mt-4">
+            <input class="btn btn-primary" type="submit" name="submit" value="Register">
+          </div>
+        </form>
+      </div>
     </div>
   </div>
-</div>
 
 {% endblock %}
