--- a/website/templates/registration/password_reset_done.html
+++ b/website/templates/registration/password_reset_done.html
@@ -1,14 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="flex w-screen justify-center">
-  <div class="w-7/8 max-w-xs lg:w-1/2 lg:max-w-none pt-8 place-items-center">
-    <div class="card h-full w-full rounded-xl border border-gray-600 border-solid place-items-center">
-      <p class="p-4 text-center"><strong>We've e-mailed you instructions for resetting your password.
-        You should receive them shortly.</strong><br><br>
-        If you don't receive an e-mail, please make sure you've entered the address you registered with,
-        and check your spam folder.
+  <div class="flex w-screen justify-center">
+    <div class="w-7/8 max-w-xs lg:w-1/2 lg:max-w-none pt-8 place-items-center">
+      <div class="card h-full w-full rounded-xl border border-gray-600 border-solid place-items-center">
+        <p class="p-4 text-center">
+          <strong>We've e-mailed you instructions for resetting your password.
+          You should receive them shortly.</strong><br><br>
+          If you don't receive an e-mail, please make sure you've entered the address you registered with,
+          and check your spam folder.
+        </p>
+      </div>
     </div>
   </div>
-</div>
 {% endblock %}
