--- a/website/templates/registration/user_welcome_email.html
+++ b/website/templates/registration/user_welcome_email.html
@@ -2,70 +2,73 @@
 <html lang="en-US">
 
 <head>
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-    <title>User Welcome Email Template</title>
-    <meta name="description" content="User Welcome Email Template.">
-    <style>
-        a:hover {text-decoration: underline !important;}
-    </style>
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
+  <title>User Welcome Email Template</title>
+  <meta name="description" content="User Welcome Email Template.">
+  <style>
+      a:hover {
+          text-decoration: underline !important;
+      }
+  </style>
 </head>
 
 <body marginheight="0" marginwidth="0" style="margin: 0; background-color: #f2f3f8;">
-    <!--100% body table-->
-    <table
-        style="@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,700|Open+Sans:300,400,600,700); font-family: 'Open Sans', sans-serif; width: 100%">
+<!--100% body table-->
+<table
+    style="@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,700|Open+Sans:300,400,600,700); font-family: 'Open Sans', sans-serif; width: 100%">
+  <tr>
+    <td>
+      <table style="background-color: #f2f3f8; max-width:670px;  margin:0 auto;">
         <tr>
-            <td>
-                <table style="background-color: #f2f3f8; max-width:670px;  margin:0 auto;">
-                    <tr>
-                        <td style="height:80px;">&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <table
-                                style="max-width:670px;background:#fff; border-radius:3px; text-align:center;-webkit-box-shadow:0 6px 18px 0 rgba(0,0,0,.06);-moz-box-shadow:0 6px 18px 0 rgba(0,0,0,.06);box-shadow:0 6px 18px 0 rgba(0,0,0,.06);">
-                                <tr>
-                                    <td style="height:40px;">&nbsp;</td>
-                                </tr>
-                                <tr>
-                                    <td style="padding:0 35px;">
-                                        <h1 style="color:#1e1e2d; font-weight:500; margin:0;font-size:32px;font-family:'Rubik',sans-serif;">Welcome to MemberZone</h1>
-                                        <span
-                                            style="display:inline-block; vertical-align:middle; margin:29px 0 26px; border-bottom:1px solid #cecece; width:100px;"></span>
-                                        <p style="color:#455056; font-size:15px; line-height:24px; margin: 0 0 24px;">
-                                            Hello! You have successfully signed up to MemberZone,
-                                            the site which allows you to keep track of your memberships and subscriptions
-                                            in one place, and to receive reminders when memberships or free trials are about
-                                            to lapse. The link below will take you to the login page.
-                                        </p>
-                                        <a target="_blank"
-                                           style="text-decoration:none; background-color: #1e1e2d; color: #fff; padding:10px 10px; border-radius:5px; display:block;"
-                                           href="{{ protocol }}://{{ domain }}{% url 'login' %}">
-                                          <strong>Log in</strong>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td style="height:40px;">&nbsp;</td>
-                                </tr>
-                            </table>
-                        </td>
-                    <tr>
-                        <td style="height:20px;">&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align:center;">
-                            <p style="font-size:14px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0;">&copy; <strong>www.member-zone.com</strong></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td style="height:80px;">&nbsp;</td>
-                    </tr>
-                </table>
-            </td>
+          <td style="height:80px;">&nbsp;</td>
         </tr>
-    </table>
-    <!--/100% body table-->
+        <tr>
+          <td>
+            <table
+                style="max-width:670px;background:#fff; border-radius:3px; text-align:center;-webkit-box-shadow:0 6px 18px 0 rgba(0,0,0,.06);-moz-box-shadow:0 6px 18px 0 rgba(0,0,0,.06);box-shadow:0 6px 18px 0 rgba(0,0,0,.06);">
+              <tr>
+                <td style="height:40px;">&nbsp;</td>
+              </tr>
+              <tr>
+                <td style="padding:0 35px;">
+                  <h1 style="color:#1e1e2d; font-weight:500; margin:0;font-size:32px;font-family:'Rubik',sans-serif;">
+                    Welcome to MemberZone</h1>
+                  <span style="display:inline-block; vertical-align:middle; margin:29px 0 26px; border-bottom:1px solid #cecece; width:100px;"></span>
+                  <p style="color:#455056; font-size:15px; line-height:24px; margin: 0 0 24px;">
+                    Hello! You have successfully signed up to MemberZone,
+                    the site which allows you to keep track of your memberships and subscriptions
+                    in one place, and to receive reminders when memberships or free trials are about
+                    to lapse. The link below will take you to the login page.
+                  </p>
+                  <a target="_blank"
+                     style="text-decoration:none; background-color: #1e1e2d; color: #fff; padding:10px 10px; border-radius:5px; display:block;"
+                     href="{{ protocol }}://{{ domain }}{% url 'login' %}">
+                    <strong>Log in</strong>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td style="height:40px;">&nbsp;</td>
+              </tr>
+            </table>
+          </td>
+        <tr>
+          <td style="height:20px;">&nbsp;</td>
+        </tr>
+        <tr>
+          <td style="text-align:center;">
+            <p style="font-size:14px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0;">
+              &copy; <strong>www.member-zone.com</strong></p>
+          </td>
+        </tr>
+        <tr>
+          <td style="height:80px;">&nbsp;</td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
+<!--/100% body table-->
 </body>
 
 </html>
