--- a/website/templates/memberships.html
+++ b/website/templates/memberships.html
@@ -6,45 +6,46 @@
 {% money_localize money %}
 
 {% block content %}
-    <div class="card items-center pt-8">
-      <h2 class="text-xl text-center w-3/4">Welcome to MemberZone! Here are your memberships.</h2>
-      <div class="divider w-1/2 mx-auto"></div>
-      <script type="text/hyperscript">
-        on membershipsChanged
-          remove .modal-open from #modal
-          show #alert-success
-          wait 3s
-          hide #alert-success
-        end
-      </script>
-      <div id="alert-success"
-           class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative mb-2 -mt-2 w-auto mx-auto"
-           role="alert" style="display: none">
-        <span class="block inline">Memberships updated successfully!</span>
-      </div>
-      <div class="flex flex-row w-screen md:w-3/4 xl:w-1/2">
-        <table class="table table-fixed grow">
-          <thead class="w-auto">
-            <tr class="text-left flex-1">
-              <th>Membership</th>
-              <th>Subscription</th>
-              <th>Renewal</th>
-              <th class="px-0 hidden sm:table-cell">Reminders</th>
-              <th class="hidden sm:table-cell">Cost</th>
-            </tr>
-          </thead>
-          <tbody id="membership-table-body"
-                 hx-trigger="load, membershipsChanged from:body"
-                 hx-get="{% url 'update-memberships' %}"
-                 hx-target=this></tbody>
-        </table>
-        <button _="on click add .modal-open to #modal"
-                class="mx-auto md:ml-2 btn btn-primary btn-square border-none basis-14">New</button>
-      </div>
+  <div class="card items-center pt-8">
+    <h2 class="text-xl text-center w-3/4">Welcome to MemberZone! Here are your memberships.</h2>
+    <div class="divider w-1/2 mx-auto"></div>
+    <script type="text/hyperscript">
+      on membershipsChanged
+        remove .modal-open from #modal
+        show #alert-success
+        wait 3s
+        hide #alert-success
+      end
+    </script>
+    <div id="alert-success"
+         class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative mb-2 -mt-2 w-auto mx-auto"
+         role="alert" style="display: none">
+      <span class="block inline">Memberships updated successfully!</span>
     </div>
+    <div class="flex flex-row w-screen md:w-3/4 xl:w-1/2">
+      <table class="table table-fixed grow">
+        <thead class="w-auto">
+        <tr class="text-left flex-1">
+          <th>Membership</th>
+          <th>Subscription</th>
+          <th>Renewal</th>
+          <th class="px-0 hidden sm:table-cell">Reminders</th>
+          <th class="hidden sm:table-cell">Cost</th>
+        </tr>
+        </thead>
+        <tbody id="membership-table-body"
+               hx-trigger="load, membershipsChanged from:body"
+               hx-get="{% url 'update-memberships' %}"
+               hx-target=this></tbody>
+      </table>
+      <button _="on click add .modal-open to #modal"
+              class="mx-auto md:ml-2 btn btn-primary btn-square border-none basis-14">New
+      </button>
+    </div>
+  </div>
 
-<div id="modal" class="modal">
-  {% include 'partials/modal-form.html' %}
-</div>
+  <div id="modal" class="modal">
+    {% include 'partials/modal-form.html' %}
+  </div>
 
 {% endblock %}
