--- a/website/templates/partials/membership-table.html
+++ b/website/templates/partials/membership-table.html
@@ -4,7 +4,8 @@
       <label tabindex="0"><a class="link cursor-pointer">{{ membership.membership_name }}</a></label>
       <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-24">
         <li>
-          <a hx-get="{% url 'edit-membership' membership.pk %}" hx-target="#modal" _="on click add .modal-open to modal">
+          <a hx-get="{% url 'edit-membership' membership.pk %}" hx-target="#modal"
+             _="on click add .modal-open to modal">
             Edit
           </a>
         </li>
@@ -25,8 +26,7 @@
              class="checkbox checkbox-primary border-gray-400 mt-1"
              {% if membership.reminder %}checked{% endif %}
              hx-post="{% url 'toggle-reminders' membership.pk %}"
-             hx-swap="none"
-      />
+             hx-swap="none"/>
     </td>
     <td class="hidden sm:table-cell">{{ membership.cost }}</td>
   </tr>
