--- a/website/templates/registration/password_reset_invalid.html
+++ b/website/templates/registration/password_reset_invalid.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="flex w-screen justify-center">
-  <div class="w-7/8 max-w-xs lg:w-1/2 lg:max-w-none pt-8 place-items-center">
-    <div class="card h-full w-full rounded-xl border border-gray-600 border-solid place-items-center">
-      <p class="p-4 text-center"><strong>Sorry, we didn't find an account associated with that e-mail address.
-        Please <a class="link" href={% url 'login' %}>register</a> to create your account.</strong><br><br>
-        If you believe we have made a mistake, please contact the site administrator.
+  <div class="flex w-screen justify-center">
+    <div class="w-7/8 max-w-xs lg:w-1/2 lg:max-w-none pt-8 place-items-center">
+      <div class="card h-full w-full rounded-xl border border-gray-600 border-solid place-items-center">
+        <p class="p-4 text-center">
+          <strong>Sorry, we didn't find an account associated with that e-mail address.
+          Please <a class="link" href={% url 'login' %}>register</a> to create your account.</strong><br><br>
+          If you believe we have made a mistake, please contact the site administrator.
+        </p>
+      </div>
     </div>
   </div>
-</div>
 {% endblock %}
