--- a/website/templates/partials/modal-form.html
+++ b/website/templates/partials/modal-form.html
@@ -3,8 +3,8 @@
 {% load widget_tweaks %}
 {% load djmoney %}
 
-<div class="modal-box p-4 scrollbar-thin" hx-target="this" hx-swap="outerHTML">
-  <button _="on click remove .modal-open from #modal then set #my-form's @hx-post to '{% url 'my-memberships' %}'"
+<div id="modal-box" class="modal-box p-4 scrollbar-thin" hx-target="this" hx-swap="outerHTML">
+  <button _="on click remove .modal-open from #modal"
           class="btn btn-sm btn-circle absolute right-2 top-2">✕
   </button>
   <h3 class="font-bold text-lg">New membership</h3>
@@ -40,7 +40,9 @@
       </div>
     </div>
     <div>
-      <button type="submit" class="btn btn-primary border-none">Save</button>
+      <button type="submit" class="btn btn-primary border-none" _="on click toggle @disabled until htmx:afterOnLoad">
+        Save
+      </button>
     </div>
   </form>
 </div>
