HTML and hyperscript tweaks

--- a/website/templates/memberships.html
+++ b/website/templates/memberships.html
@@ -42,7 +42,8 @@
       </table>
       <button _="on htmx:afterRequest add .modal-open to #modal"
               hx-get="{% url 'my-memberships' %}" hx-select="#modal-box" hx-target="#modal"
-              class="mx-auto md:ml-2 btn btn-primary btn-square border-none basis-14">New
+              class="mx-auto md:ml-2 btn btn-primary btn-square border-none basis-14">
+        New
       </button>
     </div>
     <!-- By Sam Herbert (@sherb), for everyone. More @ http://goo.gl/7AJzbL -->
