--- a/website/templates/partials/modal-form.html
+++ b/website/templates/partials/modal-form.html
@@ -5,7 +5,8 @@
 
 <div id="modal-box" class="modal-box p-4 scrollbar-thin" hx-target="this" hx-swap="outerHTML">
   <button _="on click remove .modal-open from #modal"
-          class="btn btn-sm btn-circle absolute right-2 top-2">✕
+          class="btn btn-sm btn-circle absolute right-2 top-2">
+    ✕
   </button>
   <h3 class="font-bold text-lg">New membership</h3>
   {% if form.non_field_errors %}
@@ -15,7 +16,7 @@
   {% else %}
     <p class="pt-2 pb-4">Enter the details of your subscription below</p>
   {% endif %}
-  <form id="my-form" hx-post="{{ request.path }}">
+  <form id="my-form" hx-post="{{ request.path }}" _="on submit toggle @disabled on #submit-button">
     {% csrf_token %}
     <div class="grid grid-cols-2 gap-x-4 gap-y-0">
       <div class="col-span-2">{{ form.membership_name|as_crispy_field }}</div>
@@ -40,7 +41,7 @@
       </div>
     </div>
     <div>
-      <button type="submit" class="btn btn-primary border-none" _="on click toggle @disabled until htmx:afterOnLoad">
+      <button id="submit-button" type="submit" class="btn btn-primary border-none">
         Save
       </button>
     </div>
