Add renewal and expiry reminder tasks and e-mail templates

--- a/website/templates/registration/password_reset_email.html
+++ b/website/templates/registration/password_reset_email.html
@@ -4,7 +4,7 @@
 <head>
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
   <title>Reset Password Email Template</title>
-  <meta name="description" content="Reset Password Email Template.">
+  <meta name="description" content="Reset Password Email">
   <style>
       a:hover {
           text-decoration: underline !important;
@@ -14,8 +14,7 @@
 
 <body marginheight="0" marginwidth="0" style="margin: 0; background-color: #f2f3f8;">
 <!--100% body table-->
-<table
-    style="@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,700|Open+Sans:300,400,600,700); font-family: 'Open Sans', sans-serif; width: 100%">
+<table style="@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,700|Open+Sans:300,400,600,700); font-family: 'Open Sans', sans-serif; width: 100%">
   <tr>
     <td>
       <table style="background-color: #f2f3f8; max-width:670px;  margin:0 auto;">
@@ -24,14 +23,13 @@
         </tr>
         <tr>
           <td>
-            <table
-                style="max-width:670px;background:#fff; border-radius:3px; text-align:center;-webkit-box-shadow:0 6px 18px 0 rgba(0,0,0,.06);-moz-box-shadow:0 6px 18px 0 rgba(0,0,0,.06);box-shadow:0 6px 18px 0 rgba(0,0,0,.06);">
+            <table style="max-width:670px; background:#fff; border-radius:3px; text-align:center; -webkit-box-shadow:0 6px 18px 0 rgba(0,0,0,.06); -moz-box-shadow:0 6px 18px 0 rgba(0,0,0,.06); box-shadow:0 6px 18px 0 rgba(0,0,0,.06);">
               <tr>
                 <td style="height:40px;">&nbsp;</td>
               </tr>
               <tr>
                 <td style="padding:0 35px;">
-                  <h1 style="color:#1e1e2d; font-weight:500; margin:0;font-size:32px;font-family:'Rubik',sans-serif;">
+                  <h1 style="color:#1e1e2d; font-weight:500; margin:0; font-size:32px; font-family:'Rubik',sans-serif;">
                     You have requested to reset your password</h1>
                   <span style="display:inline-block; vertical-align:middle; margin:29px 0 26px; border-bottom:1px solid #cecece; width:100px;"></span>
                   <p style="color:#455056; font-size:15px; line-height:24px; margin: 0 0 24px;">
