--- a/website/templates/reminders/free_trial_expiry_reminder_email.html
+++ b/website/templates/reminders/free_trial_expiry_reminder_email.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
-  <title>User Welcome Email Template</title>
-  <meta name="description" content="User Welcome Email">
+  <title>Free Trial Expiry Reminder Email Template</title>
+  <meta name="description" content="Free Trial Expiry Reminder Email">
   <style>
       a:hover {
           text-decoration: underline !important;
@@ -18,7 +18,7 @@
     style="@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,700|Open+Sans:300,400,600,700); font-family: 'Open Sans', sans-serif; width: 100%">
   <tr>
     <td>
-      <table style="background-color: #f2f3f8; max-width:670px;  margin:0 auto;">
+      <table style="background-color: #f2f3f8; max-width:670px; margin:0 auto;">
         <tr>
           <td style="height:80px;">&nbsp;</td>
         </tr>
@@ -30,20 +30,17 @@
               </tr>
               <tr>
                 <td style="padding:0 35px;">
-                  <h1 style="color:#1e1e2d; font-weight:500; margin:0; font-size:32px; font-family:'Rubik',sans-serif;">
-                    Welcome to MemberZone</h1>
+                  <h1 style="color:#1e1e2d; font-weight:400; margin:0; font-size:24px; font-family:'Rubik',sans-serif;">
+                    A reminder from MemberZone: free trials expiring soon</h1>
                   <span style="display:inline-block; vertical-align:middle; margin:29px 0 26px; border-bottom:1px solid #cecece; width:100px;"></span>
-                  <p style="color:#455056; font-size:15px; line-height:24px; margin: 0 0 24px;">
-                    Hello! You have successfully signed up to MemberZone,
-                    the site which allows you to keep track of all your memberships and subscriptions
-                    in one place and to receive reminders when subscriptions or free trials are about
-                    to lapse. The link below will take you to the login page.
+                  <p style="color:#455056; font-size:16px; line-height:24px; margin: 0 0 24px;">
+                    Hello! This is an automated e-mail from MemberZone,
+                    the site which allows you to keep track of your memberships and subscriptions
+                    and to receive reminders when subscriptions or free trials are about to lapse.
+                    <br/><br/>
+                    The free trials of the following subscriptions are about to expire.
+                    Remember to either cancel your subscription or verify your details before the expiry date!
                   </p>
-                  <a target="_blank"
-                     style="text-decoration:none; background-color: #1e1e2d; color: #fff; padding:10px 10px; border-radius:5px; display:block;"
-                     href="{{ protocol }}://{{ domain }}{% url 'login' %}">
-                    <strong>Log in</strong>
-                  </a>
                 </td>
               </tr>
               <tr>
