--- a/website/templates/reminders/free_trial_expiry_reminder_email.html
+++ b/website/templates/reminders/free_trial_expiry_reminder_email.html
@@ -1,70 +1,15 @@
-<!doctype html>
-<html lang="en-US">
+{% extends 'email_base.html' %}
 
-<head>
-  <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
-  <title>Free Trial Expiry Reminder Email Template</title>
-  <meta name="description" content="Free Trial Expiry Reminder Email">
-  <style>
-      a:hover {
-          text-decoration: underline !important;
-      }
-  </style>
-</head>
-
-<body marginheight="0" marginwidth="0" style="margin: 0; background-color: #f2f3f8;">
-<!--100% body table-->
-<table
-    style="@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,700|Open+Sans:300,400,600,700); font-family: 'Open Sans', sans-serif; width: 100%">
-  <tr>
-    <td>
-      <table style="background-color: #f2f3f8; max-width:670px; margin:0 auto;">
-        <tr>
-          <td style="height:80px;">&nbsp;</td>
-        </tr>
-        <tr>
-          <td>
-            <table style="max-width:670px; background:#fff; border-radius:3px; text-align:center; -webkit-box-shadow:0 6px 18px 0 rgba(0,0,0,.06); -moz-box-shadow:0 6px 18px 0 rgba(0,0,0,.06); box-shadow:0 6px 18px 0 rgba(0,0,0,.06);">
-              <tr>
-                <td style="height:40px;">&nbsp;</td>
-              </tr>
-              <tr>
-                <td style="padding:0 35px;">
-                  <h1 style="color:#1e1e2d; font-weight:400; margin:0; font-size:24px; font-family:'Rubik',sans-serif;">
-                    A reminder from MemberZone: free trials expiring soon</h1>
-                  <span style="display:inline-block; vertical-align:middle; margin:29px 0 26px; border-bottom:1px solid #cecece; width:100px;"></span>
-                  <p style="color:#455056; font-size:16px; line-height:24px; margin: 0 0 24px;">
-                    Hello! This is an automated e-mail from MemberZone,
-                    the site which allows you to keep track of your memberships and subscriptions
-                    and to receive reminders when subscriptions or free trials are about to lapse.
-                    <br/><br/>
-                    The free trials of the following subscriptions are about to expire.
-                    Remember to either cancel your subscription or verify your details before the expiry date!
-                  </p>
-                </td>
-              </tr>
-              <tr>
-                <td style="height:40px;">&nbsp;</td>
-              </tr>
-            </table>
-          </td>
-        <tr>
-          <td style="height:20px;">&nbsp;</td>
-        </tr>
-        <tr>
-          <td style="text-align:center;">
-            <p style="font-size:14px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0;">
-              &copy; <strong>www.member-zone.com</strong></p>
-          </td>
-        </tr>
-        <tr>
-          <td style="height:80px;">&nbsp;</td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>
-<!--/100% body table-->
-</body>
-
-</html>
+{% block content %}
+  <h1 style="color:#1e1e2d; font-weight:400; margin:0; font-size:24px; font-family:'Rubik',sans-serif;">
+    A reminder from MemberZone: free trials expiring soon</h1>
+  <span style="display:inline-block; vertical-align:middle; margin:29px 0 26px; border-bottom:1px solid #cecece; width:100px;"></span>
+  <p style="color:#455056; font-size:16px; line-height:24px; margin: 0 0 24px;">
+    Hello! This is an automated e-mail from MemberZone,
+    the site which allows you to keep track of your memberships and subscriptions
+    and to receive reminders when subscriptions or free trials are about to lapse.
+    <br/><br/>
+    The free trials of the following subscriptions are about to expire.
+    Remember to either cancel your subscription or verify your details before the expiry date!
+  </p>
+{% endblock %}
