--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,3 +1,16 @@
+<!--
+Copyright 2022 Owen M. Jones. All rights reserved.
+
+This file is part of MemberZone.
+
+MemberZone is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License 
+as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+
+MemberZone is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty 
+of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License along with MemberZone. If not, see <https://www.gnu.org/licenses/>.
+-->
 {% load static tailwind_tags %}
 <!DOCTYPE html>
 <html data-theme="light" lang="en">
@@ -12,7 +25,6 @@
   <script src="https://unpkg.com/htmx.org@1.7.0"
           integrity="sha384-EzBXYPt0/T6gxNp0nuPtLkmRpmDBbjg6WmCUZRLXBBwYYmwAUxzlSGej0ARHX0Bo"
           crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
   <script src="https://unpkg.com/hyperscript.org@0.9.5"></script>
 </head>
 <body>
