--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -3,13 +3,13 @@ Copyright 2022 Owen M. Jones. All rights reserved.
 
 This file is part of MemberZone.
 
-MemberZone is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License 
+MemberZone is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License
 as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
 
 MemberZone is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty 
-of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
 
-You should have received a copy of the GNU General Public License along with MemberZone. If not, see <https://www.gnu.org/licenses/>.
+You should have received a copy of the GNU Affero General Public License along with MemberZone. If not, see <https://www.gnu.org/licenses/>.
 -->
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
@@ -28,7 +28,7 @@ You should have received a copy of the GNU General Public License along with Mem
         administrator's discretion.<br/><br/>
         The project is open source, with the source code
         <a class="underline hover:font-semibold" href="https://github.com/nomadiq-sw/member-zone">available on GitHub</a>
-        under the GNU General Public License (GNU GPLv3).<br/><br/>
+        under the GNU Affero General Public License (GNU AGPLv3).<br/><br/>
         If you have a question about the project or encounter a problem using the website, you can contact the site
         administrator using the contact form below. We will try to get back to you as soon as possible.
       </p>
