--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -1,18 +1,4 @@
-<!--
-Copyright 2022 Owen M. Jones. All rights reserved.
-
-This file is part of MemberZone.
-
-MemberZone is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License
-as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
-
-MemberZone is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty 
-of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
-
-You should have received a copy of the GNU Affero General Public License along with MemberZone. If not, see <https://www.gnu.org/licenses/>.
--->
 {% extends 'base.html' %}
-{% load crispy_forms_tags %}
 
 {% block content %}
   <div class="card card-compact w-7/8 lg:w-1/2 mx-auto">
@@ -34,15 +20,7 @@ You should have received a copy of the GNU Affero General Public License along w
       </p>
       <div class="divider mx-auto w-1/4"></div>
       <h2 class="card-title">Ask a question</h2>
-      <form id="contact-form" method="post" hx-post="{% url 'submit-query' %}">
-        {% csrf_token %}
-        <div class="flex-row gap-x-4 gap-y-0">
-          {% crispy form %}
-          <button id="send-button" type="submit" class="btn btn-primary border-none">
-            Send
-          </button>
-        </div>
-      </form>
+      {% include 'partials/contact-form.html' %}
     </div>
   </div>
 {% endblock %}
