--- a/website/templates/registration/password_reset_email.html
+++ b/website/templates/registration/password_reset_email.html
@@ -1,17 +1,4 @@
-<!--
-Copyright 2022 Owen M. Jones. All rights reserved.
-
-This file is part of MemberZone.
-
-MemberZone is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License
-as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
-
-MemberZone is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty 
-of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
-
-You should have received a copy of the GNU Affero General Public License along with MemberZone. If not, see <https://www.gnu.org/licenses/>.
--->
-{% extends 'email_base.html' %}
+{% extends 'email-base.html' %}
 
 {% block content %}
   <h1 style="color:#1e1e2d; font-weight:500; margin:0; font-size:32px; font-family:'Rubik',sans-serif;">
