Add terms & conditions, privacy policy and favicon

--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -5,16 +5,23 @@
     <div class="card-body">
       <h2 class="card-title">About MemberZone</h2>
       <p class="text-lg text-justify">
-        MemberZone is developed by
-        <a class="underline hover:font-semibold" href="https://github.com/nomadiq-sw">nomadiq software</a>
-        and hosted on ...
+        MemberZone is a personal, non-commercial project built by a solo developer under the informal name
+        <a class="link hover:font-semibold" target="_blank" href="https://github.com/nomadiq-sw">nomadiq software</a>.
         The site is free to use and contains no ads, spyware or tracking cookies. Users' data is stored securely and is
         not sold or communicated to third parties. The website is provided with no guarantee as to its fitness for a
         particular purpose, and with the understanding that it may be removed or modified at any time at the
-        administrator's discretion.<br/><br/>
+        administrator's discretion. For full details, see the
+        <a class="link hover:font-semibold" target="_blank" href="{% url 'terms-conditions' %}">terms & conditions</a>
+        and
+        <a class="link hover:font-semibold" target="_blank" href="{% url 'privacy-policy' %}">privacy policy</a>.
+      </p>
+      <p class="text-lg text-justify py-1">
         The project is open source, with the source code
-        <a class="underline hover:font-semibold" href="https://github.com/nomadiq-sw/member-zone">available on GitHub</a>
-        under the GNU Affero General Public License (GNU AGPLv3).<br/><br/>
+        <a class="link hover:font-semibold" target="_blank" href="https://github.com/nomadiq-sw/member-zone">
+          available on GitHub</a>
+        under the GNU Affero General Public License (GNU AGPLv3).
+      </p>
+      <p class="text-lg text-justify">
         If you have a question about the project or encounter a problem using the website, you can contact the site
         administrator using the contact form below. We will try to get back to you as soon as possible.
       </p>
