--- a/website/templates/privacy-policy.html
+++ b/website/templates/privacy-policy.html
@@ -103,7 +103,7 @@
       </ul>
       <p class="text-justify">
         If you make a request, we have one month to respond to you. If you would like to exercise any of these rights,
-        please contact us by e-mail: <strong>admin@member-zone.com</strong>.
+        please contact us by e-mail: <strong>admin@{{ root_domain }}</strong>.
       </p>
       <h3 class="text-md pt-2 font-semibold">Cookies</h3>
       <p class="text-justify">
@@ -147,8 +147,9 @@
       <h3 class="text-md pt-2 font-semibold">Contact Us</h3>
       <p class="text-justify">
         If you have any questions about this Privacy Policy, the data we hold on you, or you would like to
-        exercise one of your data protection rights, please do not hesitate to contact us by e-mail:<br/>
-        <strong>admin@member-zone.com</strong>
+        exercise one of your data protection rights, please do not hesitate to contact us:<br/>
+        <strong>E-mail:</strong> admin@{{ root_domain }}<br/>
+        <strong>Telephone:</strong> +33 7 83 68 61 39
       </p>
       <h3 class="text-md pt-2 font-semibold">Contact the supervisory authority</h3>
       <p class="text-justify">
