--- a/website/templates/email-base.html
+++ b/website/templates/email-base.html
@@ -1,16 +1,3 @@
-<!--
-Copyright 2022 Owen M. Jones. All rights reserved.
-
-This file is part of MemberZone.
-
-MemberZone is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License
-as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
-
-MemberZone is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty 
-of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
-
-You should have received a copy of the GNU Affero General Public License along with MemberZone. If not, see <https://www.gnu.org/licenses/>.
--->
 <!doctype html>
 <html lang="en-US">
 
@@ -57,7 +44,7 @@ You should have received a copy of the GNU Affero General Public License along w
         <tr>
           <td style="text-align:center;">
             <p style="font-size:14px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0;">
-              &copy; <strong>www.member-zone.com</strong></p>
+              &copy; <strong>{{ domain }}</strong></p>
           </td>
         </tr>
         <tr>
